k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: boilerplate
  labels:
    app.kubernetes.io/name: boilerplate
    app.kubernetes.io/part-of: boilerplate-backend
