k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: boilerplate-api
  namespace: boilerplate
  labels:
    app.kubernetes.io/name: boilerplate
    app.kubernetes.io/component: api
    app.kubernetes.io/part-of: boilerplate-backend
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: boilerplate
    app.kubernetes.io/component: api
